--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -79,3 +79,9 @@
     </div>
   </div>
 </nav>
+<% if user_signed_in? %>
+<%= current_user.email %>
+  <p>Mode: <%= current_user.mode %></p>
+  <p>Subscription plan: <%= current_user.subscription_status %></p>
+  <p>Stripe customer id <%= current_user.stripe_customer_id %></p>
+<% end %>
