--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,52 +1,3 @@
-<!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark bg-primary">-->
-<!--  <div class="container-fluid">-->
-    <%#= link_to 'Photo App' , root_path , class: "navbar-brand" %>
-<!--    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--      <span class="navbar-toggler-icon"></span>-->
-<!--    </button>-->
-<!--    <div class="collapse navbar-collapse" id="navbarSupportedContent">-->
-<!--      <ul class="navbar-nav me-auto mb-2 mb-lg-0">-->
-<!--        <li class="nav-item dropdown">-->
-            <%#= link_to 'Home' , root_path , class: "nav-item active" %>
-<!--        </li>-->
-<!--        <li class="nav-item dropdown">-->
-<!--          <a class="nav-link" href="#">Link</a>-->
-          <%# if user_signed_in? %>
-            <%#= link_to 'Sign Out' , destroy_user_session_path, data: { turbo_method: :delete }, class: "list-item" %>
-        <%# end %>
-<!--        </li>-->
-
-<!--        <li class="nav-item dropdown">-->
-<!--          <a class="nav-link active dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">-->
-<!--            Account-->
-<!--          </a>-->
-<!--          <ul class="dropdown-menu active" aria-labelledby="navbarDropdown">-->
-            <%# if user_signed_in? %>
-              <%#= link_to 'Sign Out' , destroy_user_session_path, data: { turbo_method: :delete }, class: "dropdown-item" %>
-              <%# else %>
-<!--            <li><a class="dropdown-item" href="#">Sign In</a>-->
-              <%#= link_to 'Sign In' , new_user_session_path, class: "nav-item active" %>
-<!--            </li>-->
-              <%# end %>
-<!--            <li><a class="dropdown-item" href="#">Sign Up</a></li>-->
-<!--            <li><hr class="dropdown-divider"></li>-->
-<!--            <li><a class="dropdown-item" href="#">Something else here</a></li>-->
-<!--          </ul>-->
-<!--        </li>-->
-<!--        <li class="nav-item">-->
-<!--          <a class="nav-link disabled">Disabled</a>-->
-<!--        </li>-->
-<!--      </ul>-->
-<!--      <form class="d-flex">-->
-<!--        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-<!--        <button class="btn btn-outline-success" type="submit">Search</button>-->
-<!--      </form>-->
-<!--    </div>-->
-<!--  </div>-->
-<!--</nav>-->
-
-
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
   <div class="container-fluid">
     <%= link_to 'DeviseDemo', root_path, class: 'navbar-brand' %>
@@ -85,4 +36,7 @@
   <p>Subscription plan: <%= current_user.subscription_status %></p>
   <p>Stripe customer id <%= current_user.stripe_customer_id %></p>
   <a><%= link_to "Pricing", pricing_path  %></a>
+  <% else %>
+  <%= link_to "Sign Up",  new_user_registration_path, method: :post, remote: true %>
 <% end %>
+
